[gd_scene load_steps=18 format=3 uid="uid://dugaivbj1o66n"]

[ext_resource type="Script" path="res://level/scripts/level.gd" id="1_e1sh7"]
[ext_resource type="PackedScene" uid="uid://bn7vh6v8mmgja" path="res://player/player_charbody3d.tscn" id="2_5wxyk"]
[ext_resource type="Shader" path="res://utility scripts/filmgrain.gdshader" id="3_1ypwr"]
[ext_resource type="FontFile" uid="uid://diapabmalpcrj" path="res://assets/fonts/Kurland.ttf" id="3_icc4p"]
[ext_resource type="Shader" path="res://utility scripts/horror_pixels.gdshader" id="4_mglur"]
[ext_resource type="Environment" uid="uid://c8oyix4qs0l7j" path="res://assets/environment/SecondForestEnv.tres" id="5_hv8je"]
[ext_resource type="PackedScene" uid="uid://bnov3r3udtsa3" path="res://assets/environment/forest_sun.tscn" id="5_hyp44"]
[ext_resource type="AudioStream" uid="uid://cltwo5xg7hrjg" path="res://audio/ambience-wind-blowing-through-trees-01-186986.mp3" id="8_am4re"]
[ext_resource type="AudioStream" uid="uid://bhx06184tdu7w" path="res://audio/soft-wind-outside-sound-ambient-141989.mp3" id="9_xv7lm"]
[ext_resource type="PackedScene" uid="uid://b6nuyrcy1rigj" path="res://level/scenes/menu_environment.tscn" id="11_arsip"]
[ext_resource type="AudioStream" uid="uid://dw4bplkv57i6i" path="res://assets/environment/GodotGrass/grass_loop.wav" id="21_m577m"]
[ext_resource type="AudioStream" uid="uid://d4mv7rx862p3o" path="res://assets/environment/GodotGrass/insects_loop.wav" id="23_aoolo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqduw"]
shader = ExtResource("3_1ypwr")
shader_parameter/grain_amount = 0.04
shader_parameter/grain_size = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bpqhk"]
shader = ExtResource("4_mglur")
shader_parameter/luminance = Color(0.3086, 0.6094, 0.082, 1)
shader_parameter/brightness = 0.26
shader_parameter/contrast = 3.0
shader_parameter/scale = 1.5
shader_parameter/rotation = 0.08
shader_parameter/resolution_downsampling = 1.5

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7t4rf"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_yhx56"]
seamless = true
noise = SubResource("FastNoiseLite_7t4rf")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_npnbc"]
color = Color(0, 0, 0, 0)

[node name="Level" type="Node3D"]
script = ExtResource("1_e1sh7")
player_scene = ExtResource("2_5wxyk")

[node name="FilmGrain" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_tqduw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DownSample" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_bpqhk")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = ExtResource("5_hv8je")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -0.685565, 0.728012, 0, -0.728012, -0.685565, 0, 4, 0)
visible = false
light_energy = 0.8
shadow_enabled = true
shadow_normal_bias = 3.0
shadow_opacity = 0.9
directional_shadow_mode = 0
sky_mode = 1

[node name="ForestSun" parent="Environment" instance=ExtResource("5_hyp44")]
light_volumetric_fog_energy = 2.5
shadow_enabled = true
directional_shadow_mode = 0
sky_mode = 1

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_m577m")
volume_db = -25.164
pitch_scale = 0.91
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_am4re")
volume_db = 15.733
autoplay = true

[node name="Cold" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_xv7lm")
volume_db = 2.521
autoplay = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_aoolo")
volume_db = -35.0
autoplay = true

[node name="PlayersContainer" type="Node3D" parent="."]

[node name="EnemiesContainer" type="Node3D" parent="."]

[node name="EnvironmentContainer" type="Node3D" parent="."]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
custom_minimum_size = Vector2(650, 800)
layout_mode = 2
offset_top = -157.0
offset_right = 650.0
offset_bottom = 1370.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color(0, 0, 0, 0.811765)

[node name="TextureRect" type="TextureRect" parent="Menu"]
self_modulate = Color(1, 1, 1, 0.129412)
layout_mode = 0
offset_left = 2.0
offset_top = -66.0
offset_right = 627.0
offset_bottom = 1187.0
texture = SubResource("NoiseTexture2D_yhx56")
expand_mode = 1
stretch_mode = 1

[node name="MainContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 611.0
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 70
text = "Taiga"

[node name="MarginContainer" type="MarginContainer" parent="Menu/MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainMenu" type="VBoxContainer" parent="Menu/MainContainer/MarginContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator1" type="HSeparator" parent="Menu/MainContainer/MarginContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Option1" type="HBoxContainer" parent="Menu/MainContainer/MarginContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MarginContainer/MainMenu/Option1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 27
text = "Nickname: "

[node name="NickInput" type="LineEdit" parent="Menu/MainContainer/MarginContainer/MainMenu/Option1"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
max_length = 15
expand_to_text_length = true

[node name="Option2" type="HBoxContainer" parent="Menu/MainContainer/MarginContainer/MainMenu"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MarginContainer/MainMenu/Option2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
text = "Player Skin : "

[node name="SkinInput" type="LineEdit" parent="Menu/MainContainer/MarginContainer/MainMenu/Option2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
placeholder_text = "blue"
alignment = 1
expand_to_text_length = true

[node name="Option3" type="HBoxContainer" parent="Menu/MainContainer/MarginContainer/MainMenu"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MainContainer/MarginContainer/MainMenu/Option3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
text = "IP Address : "

[node name="AddressInput" type="LineEdit" parent="Menu/MainContainer/MarginContainer/MainMenu/Option3"]
custom_minimum_size = Vector2(378, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
placeholder_text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="HSeparator2" type="HSeparator" parent="Menu/MainContainer/MarginContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_npnbc")

[node name="Buttons" type="HBoxContainer" parent="Menu/MainContainer/MarginContainer/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Host" type="Button" parent="Menu/MainContainer/MarginContainer/MainMenu/Buttons"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.52549, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
text = "HOST"
flat = true

[node name="Join" type="Button" parent="Menu/MainContainer/MarginContainer/MainMenu/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.525257, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0.52549, 0, 1)
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
text = "JOIN"
flat = true

[node name="Option4" type="HBoxContainer" parent="Menu/MainContainer/MarginContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Quit" type="Button" parent="Menu/MainContainer/MarginContainer/MainMenu/Option4"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.858807, 4.71681e-06, 1.15514e-06, 0.862745)
theme_override_colors/font_pressed_color = Color(0.858824, 0, 0, 0.862745)
theme_override_fonts/font = ExtResource("3_icc4p")
theme_override_font_sizes/font_size = 35
text = "QUIT"
flat = true

[node name="LoadingControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LOADING" type="ColorRect" parent="LoadingControl"]
custom_minimum_size = Vector2(650, 800)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 3
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="TextureRect2" type="TextureRect" parent="LoadingControl"]
visible = false
self_modulate = Color(1, 1, 1, 0.129412)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_yhx56")
expand_mode = 1
stretch_mode = 1

[node name="SpawnerPlayers" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/player_charbody3d.tscn")
spawn_path = NodePath("../PlayersContainer")

[node name="SpawnerEnemies" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://enemy/enemy_base_root_motion.tscn")
spawn_path = NodePath("../EnemiesContainer")

[node name="SpawnerEnvironment" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://assets/interactable/medieval_carriage/cart.tscn", "res://level/scenes/encounter.tscn", "res://level/scenes/town.tscn", "res://player/equipment_system/equipment/bullet.tscn")
spawn_path = NodePath("../EnvironmentContainer")

[node name="MenuEnvironmentArea" parent="." instance=ExtResource("11_arsip")]

[connection signal="pressed" from="Menu/MainContainer/MarginContainer/MainMenu/Buttons/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/MainContainer/MarginContainer/MainMenu/Buttons/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/MainContainer/MarginContainer/MainMenu/Option4/Quit" to="." method="_on_quit_pressed"]
